--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <body>
     <h1>Eclipse</h1>
     <p class="minecraft-text">Minecraft SolsticeSkid Client</p>
+    <p> Eclipse V7 - Coming soon...</p>
     <a href="https://discord.gg/VYyrtFX2ed" class="discord-button">Discord Server</a>
     <div class="contributors">
         <h2>Dev</h2>
