--- a/index.html
+++ b/index.html
@@ -71,26 +71,8 @@
     <p class="minecraft-text">Minecraft SolsticeSkid Client</p>
     <p> Eclipse V7 - Coming soon...</p>
     <a href="https://discord.gg/VYyrtFX2ed" class="discord-button">Discord Server</a>
-
-    <a id="downloadBtn" href="https://github.com/onull9999/Eclipse/raw/refs/heads/main/Eclipse.dll" 
-   class="discord-button" download>
-   Download click here
-</a>
-<p id="downloadCountText" class="minecraft-text">It has been downloaded 0 times so far.</p>
-
-<script>
-    //counter
-    let downloadCount = localStorage.getItem("eclipseDownloadCount") || 0;
-    document.getElementById("downloadCountText").textContent = `It has been downloaded ${downloadCount} times so far.`;
-
-    
-    document.getElementById("downloadBtn").addEventListener("click", function () {
-        downloadCount++;
-        localStorage.setItem("eclipseDownloadCount", downloadCount);
-        document.getElementById("downloadCountText").textContent = `It has been downloaded ${downloadCount} times so far.`;
-    });
-</script>
-    
+    <a id="downloadBtn" href="https://github.com/onull9999/Eclipse/raw/refs/heads/main/Eclipse.dll" class="discord-button" download>Download click here</a>
+    <p id="downloadCountText" class="minecraft-text">Loading...</p>
     <div class="contributors">
         <h2>Dev</h2>
         <p>@Tqk4Playz (<a href="https://github.com/Tqk4Playz">GitHub</a>)</p>
@@ -98,5 +80,33 @@
         <p>@Aspw (<a href="https://github.com/Aspw-w">GitHub</a>)</p>
         <p>@owo (<a href="https://github.com/Ascend-UwU">GitHub</a>)</p>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyAyyBATYoNqqd-MJBNnGzNG68VC76qiO6Y",
+            authDomain: "downloadcounter-e4c5e.firebaseapp.com",
+            databaseURL: "https://downloadcounter-e4c5e-default-rtdb.firebaseio.com",
+            projectId: "downloadcounter-e4c5e",
+            storageBucket: "downloadcounter-e4c5e.firebasestorage.app",
+            messagingSenderId: "100408360187",
+            appId: "1:100408360187:web:a9d748f9a8fb6a5118c45e",
+            measurementId: "G-VNKN7FMBJ7"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+        const countRef = db.ref("downloadCount");
+
+        countRef.on("value", (snapshot) => {
+            const count = snapshot.val() || 0;
+            document.getElementById("downloadCountText").textContent = `It has been downloaded ${count} times so far.`;
+        });
+
+        document.getElementById("downloadBtn").addEventListener("click", () => {
+            countRef.transaction((current) => (current || 0) + 1);
+        });
+    </script>
 </body>
 </html>
