--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <p>@owo (<a href="https://github.com/Ascend-UwU">GitHub</a>)</p>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script>
-        const firebaseConfig = {
+        var firebaseConfig = {
             apiKey: "AIzaSyAyyBATYoNqqd-MJBNnGzNG68VC76qiO6Y",
             authDomain: "downloadcounter-e4c5e.firebaseapp.com",
             databaseURL: "https://downloadcounter-e4c5e-default-rtdb.firebaseio.com",
@@ -95,17 +95,19 @@
             measurementId: "G-VNKN7FMBJ7"
         };
 
-        const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-        const countRef = db.ref("downloadCount");
+        firebase.initializeApp(firebaseConfig);
+        var db = firebase.database();
+        var countRef = db.ref("downloadCount");
 
-        countRef.on("value", (snapshot) => {
-            const count = snapshot.val() || 0;
-            document.getElementById("downloadCountText").textContent = `It has been downloaded ${count} times so far.`;
+        countRef.on("value", function(snapshot) {
+            var count = snapshot.val() || 0;
+            document.getElementById("downloadCountText").textContent = "It has been downloaded " + count + " times so far.";
         });
 
-        document.getElementById("downloadBtn").addEventListener("click", () => {
-            countRef.transaction((current) => (current || 0) + 1);
+        document.getElementById("downloadBtn").addEventListener("click", function() {
+            countRef.transaction(function(current) {
+                return (current || 0) + 1;
+            });
         });
     </script>
 </body>
