--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <h1>Eclipse</h1>
     <p class="minecraft-text">Minecraft SolsticeSkid Client</p>
     <p>1.21.70 release soon</p>
-    <a href="https://discord.gg/VYyrtFX2ed" class="discord-button">Discord Server</a>
+    <a href="https://discord.gg/ZYwkjTEs" class="discord-button">Discord Server</a>
     <div class="contributors">
         <h2>Dev</h2>
         <p>@onull9999 (<a href="https://github.com/onull9999">GitHub</a>)</p>
